--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --config ./example/build/webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -17,12 +18,32 @@
   },
   "homepage": "https://github.com/or-change/sdlc#readme",
   "dependencies": {
-    "@koa/router": "^8.0.0",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@koa/router": "^8.0.1",
     "@or-change/data-hub": "^0.1.4",
     "@or-change/duck": "^0.1.1",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
     "koa-session": "^5.12.3",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "vue-loader": "^15.7.1",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
     "webpack-merge": "^4.2.2"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack-dev-server": "^3.8.0"
   }
 }
