[ADDED] the realize of persistent and the router

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,7 @@
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
+        "ecmaVersion": 2018
     },
     "plugins": [
         // "vue"
@@ -38,6 +37,10 @@
         ],
         "require-atomic-updates": [
             "off"
+        ],
+        "strict": [
+            "error",
+            "global"
         ]
     }
 }
