--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^6.2.0",
     "webpack-dev-server": "^3.8.0"
   }
 }
