--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,8 @@
         "node": true
     },
     "extends": [
-        "eslint:recommended"
-        // "plugin:vue/essential"
+        "eslint:recommended",
+        "plugin:vue/essential"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -16,7 +16,7 @@
         "ecmaVersion": 2018
     },
     "plugins": [
-        // "vue"
+        "vue"
     ],
     "rules": {
         "indent": [
