--- a/packages/sdlc-example/package.json
+++ b/packages/sdlc-example/package.json
@@ -6,13 +6,6 @@
   "homepage": "https://github.com/or-change/sdlc#readme",
   "license": "ISC",
   "main": "lib/sdlc-example.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
   "publishConfig": {
     "access": "public"
   },
@@ -20,15 +13,19 @@
     "type": "git",
     "url": "git+https://github.com/or-change/sdlc.git"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "bugs": {
     "url": "https://github.com/or-change/sdlc/issues"
   },
   "dependencies": {
-    "@or-change/sdlc": "^0.0.0"
+    "@or-change/sdlc": "^0.0.0",
+    "@or-change/sdlc-basicauth": "^1.0.0",
+    "@or-change/sdlc-github": "^0.0.0",
+    "@or-change/sdlc-poster": "^0.0.0",
+    "@or-change/sdlc-register": "^1.0.0"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.2.0"
   }
 }
