--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -6,13 +6,6 @@
   "homepage": "https://github.com/or-change/sdlc#readme",
   "license": "MIT",
   "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
   "publishConfig": {
     "access": "public"
   },
@@ -27,7 +20,36 @@
     "url": "https://github.com/or-change/sdlc/issues"
   },
   "dependencies": {
-    "@or-change/duck": "^0.2.0"
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@fortawesome/fontawesome-free": "^5.10.2",
+    "@koa/router": "^8.0.1",
+    "@or-change/data-hub": "^0.1.4",
+    "@or-change/duck": "^0.2.0",
+    "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
+    "bootstrap-vue": "^2.0.0-rc.28",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "koa": "^2.8.1",
+    "koa-body": "^4.1.1",
+    "koa-session": "^5.12.3",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "semver": "^6.3.0",
+    "style-loader": "^1.0.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.1",
+    "vue-router": "^3.1.3",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
     "mocha": "^6.2.0"
