--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -28,7 +28,13 @@
     "@fortawesome/fontawesome-free": "^5.10.2",
     "@koa/router": "^8.0.1",
     "@or-change/data-hub": "^0.1.4",
-    "@or-change/duck": "^0.2.0",
+    "@or-change/duck-datahub": "^0.1.0",
+    "@or-change/duck-web": "^0.1.0",
+    "@or-change/duck-web-koa": "^0.1.0",
+    "@or-change/duck-web-koa-acl": "^0.1.0",
+    "@or-change/duck-web-koa-router": "^0.1.0",
+    "@or-change/duck-web-koa-session": "^0.1.0",
+    "@or-change/duck-webpack": "^0.1.0",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "bootstrap-vue": "^2.0.0-rc.28",
