--- a/packages/sdlc-store-memory/store/project.json
+++ b/packages/sdlc-store-memory/store/project.json
@@ -1,1 +1,10 @@
-[]
+[
+	{
+    "id": "76a1d62d",
+    "name": "project 1",
+    "ownerId": "1",
+    "language": "node",
+    "abstract": "test",
+    "createdAt": "2019-09-11T07:03:33.415Z"
+	}
+]
