[ADDED] SingIn Overview ProjectAll ProjectDetail

--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "^8.0.6",
     "bootstrap-vue": "^2.0.0-rc.28",
     "css-loader": "^3.2.0",
+    "dateformat": "^3.0.3",
     "file-loader": "^4.2.0",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
@@ -47,6 +48,7 @@
     "sass-loader": "^8.0.0",
     "semver": "^6.3.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.1.3",
