--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -20,24 +20,24 @@
     "url": "https://github.com/or-change/sdlc/issues"
   },
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/runtime": "^7.6.0",
     "@fortawesome/fontawesome-free": "^5.10.2",
     "@koa/router": "^8.0.1",
     "@or-change/data-hub": "^0.1.4",
-    "@or-change/duck-datahub": "^0.1.0",
-    "@or-change/duck-web": "^0.1.0",
-    "@or-change/duck-web-koa": "^0.1.0",
-    "@or-change/duck-web-koa-acl": "^0.1.0",
-    "@or-change/duck-web-koa-router": "^0.1.0",
-    "@or-change/duck-web-koa-session": "^0.1.0",
-    "@or-change/duck-webpack": "^0.1.0",
+    "@or-change/duck-datahub": "^0.1.1",
+    "@or-change/duck-web": "^0.1.1",
+    "@or-change/duck-web-koa": "^0.2.0",
+    "@or-change/duck-web-koa-acl": "^0.1.1",
+    "@or-change/duck-web-koa-router": "^0.1.1",
+    "@or-change/duck-web-koa-session": "^0.1.1",
+    "@or-change/duck-webpack": "^0.1.1",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
-    "bootstrap-vue": "^2.0.0-rc.28",
+    "bootstrap-vue": "^2.0.0",
     "css-loader": "^3.2.0",
     "dateformat": "^3.0.3",
     "file-loader": "^4.2.0",
@@ -56,7 +56,7 @@
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
     "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7",
+    "webpack-cli": "^3.3.8",
     "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
