--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@or-change/sdlc",
   "version": "0.0.1",
+  "private": true,
   "description": "> TODO: description",
   "author": "leoword <leowordpassword123>",
   "homepage": "https://github.com/or-change/sdlc#readme",
@@ -28,16 +29,18 @@
     "@fortawesome/fontawesome-free": "^5.10.2",
     "@koa/router": "^8.0.1",
     "@or-change/data-hub": "^0.1.4",
-    "@or-change/duck-datahub": "^0.1.1",
-    "@or-change/duck-web": "^0.1.1",
-    "@or-change/duck-web-koa": "^0.2.0",
-    "@or-change/duck-web-koa-acl": "^0.1.1",
-    "@or-change/duck-web-koa-router": "^0.1.1",
-    "@or-change/duck-web-koa-session": "^0.1.1",
-    "@or-change/duck-webpack": "^0.1.1",
+    "@or-change/duck-datahub": "^0.1.2",
+    "@or-change/duck-log": "^0.1.2",
+    "@or-change/duck-web": "^0.1.2",
+    "@or-change/duck-web-koa": "^0.2.1",
+    "@or-change/duck-web-koa-acl": "^0.1.2",
+    "@or-change/duck-web-koa-router": "^0.1.2",
+    "@or-change/duck-web-koa-session": "^0.1.2",
+    "@or-change/duck-web-koa-validator": "^0.1.2",
+    "@or-change/duck-webpack": "^0.1.2",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
-    "bootstrap-vue": "^2.0.0",
+    "bootstrap-vue": "^2.0.1",
     "css-loader": "^3.2.0",
     "dateformat": "^3.0.3",
     "file-loader": "^4.2.0",
@@ -55,7 +58,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
-    "webpack": "^4.39.3",
+    "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8",
     "webpack-merge": "^4.2.2"
   },
