--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "devDependencies": {
+    "eslint": "^6.4.0",
+    "eslint-plugin-vue": "^5.2.3",
     "lerna": "^3.16.4"
   },
   "scripts": {
