[FIXED] remove package-lock add app plugin manager

--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,9 @@
   "packages": [
     "packages/*"
   ],
+  "bootstrap": {
+    "ignore": "component-*",
+    "npmClientArgs": ["--no-package-lock"]
+  },
   "version": "independent"
 }
