--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,15 +6,16 @@
         "mocha": true
     },
     "extends": [
-        "eslint:recommended"
-        // "plugin:vue/essential"
+        "eslint:recommended",
+        "plugin:vue/essential"
     ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 2017,
+        "sourceType":"module"
     },
     "plugins": [
         "vue"
