--- a/packages/sdlc-example/package.json
+++ b/packages/sdlc-example/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@or-change/sdlc": "^0.0.1",
     "@or-change/sdlc-basic-credentical": "^1.0.1",
+    "@or-change/sdlc-git": "^1.0.0",
     "@or-change/sdlc-github": "^0.0.1",
     "@or-change/sdlc-poster": "^0.0.1",
     "@or-change/sdlc-register": "^1.0.1"
