--- a/packages/sdlc-git/package.json
+++ b/packages/sdlc-git/package.json
@@ -1,19 +1,13 @@
 {
   "name": "@or-change/sdlc-git",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
   "description": "> TODO: description",
   "author": "leoword <leowordpassword123>",
   "homepage": "https://github.com/or-change/sdlc#readme",
   "license": "ISC",
-  "main": "lib/sdlc-git.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
+ 
+  "main": "index.js",
   "publishConfig": {
     "access": "public"
   },
@@ -21,10 +15,17 @@
     "type": "git",
     "url": "git+https://github.com/or-change/sdlc.git"
   },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
+  "scripts": {},
   "bugs": {
     "url": "https://github.com/or-change/sdlc/issues"
+  },
+  "dependencies": {
+    "@or-change/sdlc": "^0.0.1",
+    "archiver": "^3.1.1",
+    "fs-extra": "^8.1.0",
+    "nodegit": "^0.26.0"
+  },
+  "devDependencies": {
+    "mocha": "^6.2.0"
   }
 }
