--- a/packages/sdlc-git/package.json
+++ b/packages/sdlc-git/package.json
@@ -6,7 +6,6 @@
   "author": "leoword <leowordpassword123>",
   "homepage": "https://github.com/or-change/sdlc#readme",
   "license": "ISC",
- 
   "main": "index.js",
   "publishConfig": {
     "access": "public"
@@ -22,6 +21,7 @@
   "dependencies": {
     "@or-change/sdlc": "^0.0.1",
     "archiver": "^3.1.1",
+    "axios": "^0.19.0",
     "fs-extra": "^8.1.0",
     "nodegit": "^0.26.0"
   },
