--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -60,7 +60,8 @@
     "vuex": "^3.1.1",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "yaml-loader": "^0.5.0"
   },
   "devDependencies": {
     "@or-change/sdlc-store-memory": "^1.0.0",
