--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^3.2.0",
     "dateformat": "^3.0.3",
     "file-loader": "^4.2.0",
+    "json-loader": "^0.5.7",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
     "koa-session": "^5.12.3",
@@ -53,6 +54,7 @@
     "style-loader": "^1.0.0",
     "url-loader": "^2.1.0",
     "vue": "^2.6.10",
+    "vue-i18n": "^8.14.1",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
