--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -30,7 +30,7 @@
     "@koa/router": "^8.0.1",
     "@or-change/data-hub": "^0.1.4",
     "@or-change/duck-datahub": "^0.1.2",
-    "@or-change/duck-log": "^0.1.2",
+    "@or-change/duck-log": "^0.2.0",
     "@or-change/duck-web": "^0.1.2",
     "@or-change/duck-web-koa": "^0.2.1",
     "@or-change/duck-web-koa-acl": "^0.1.2",
@@ -49,6 +49,7 @@
     "koa-body": "^4.1.1",
     "koa-session": "^5.12.3",
     "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
     "semver": "^6.3.0",
     "style-loader": "^1.0.0",
