--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -38,6 +38,7 @@
     "@or-change/duck-web-koa-session": "^0.1.2",
     "@or-change/duck-web-koa-validator": "^0.1.3",
     "@or-change/duck-webpack": "^0.1.2",
+    "autoprefixer": "^9.6.1",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "bootstrap-vue": "^2.0.1",
