--- a/packages/sdlc/package.json
+++ b/packages/sdlc/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@koa/router": "^8.0.2",
     "@or-change/data-hub": "^0.1.4",
+    "@or-change/duck": "^0.5.0",
     "@or-change/duck-datahub": "^0.2.0",
     "@or-change/duck-log": "^0.2.1",
     "@or-change/duck-web": "^0.2.0",
